Implemented get user with api definition
